gitops/01-system/main/keycloak/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
  - name: management-gateway
    namespace: istio-system
  hostnames:
  - "keycloak.jin-server.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak
      port: 8080 # Keycloak service port
